--- a/styles/base.css
+++ b/styles/base.css
@@ -1,56 +1,73 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
-
 :root {
-  --mainblue: #0d2149;
-  --lighterblue: #7a89c2;
-  --licorice: #0e0004;
-  --light: #eef0f2;
-  --accent: #98473e;
+    --mainblue: #0d2149;
+    --lighterblue: #7a89c2;
+    --licorice: #0e0004;
+    --light: #eef0f2;
+    --accent: #98473e;
 }
 
 * {
-  width: 100%;
-  font-family: "Merriweather", Helvetica, sans-serif;
-  margin: 0;
-  padding: 0;
+    width: 100%;
+    font-family: "Merriweather", Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 nav {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
-  text-align: center;
-  background-color: var(--lighterblue);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    text-align: center;
+    background-color: var(--lighterblue);
 }
 
 nav a {
-  text-decoration: none;
-  color: var(--light);
+    text-decoration: none;
+    color: var(--light);
 }
 
 header {
-  display: flex;
-  flex-direction: column;
-  background-color: var(--mainblue);
-  color: var(--light);
+    display: flex;
+    flex-direction: column;
+    background-color: var(--mainblue);
+    color: var(--light);
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 header img {
-  width: 30%;
+    width: 30%;
 }
 
 main {
-  max-width: 500px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+    max-width: 800px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 10px;
 }
 
 main h2 {
-  grid-column: 1/5;
+    grid-column: 1/13;
+    text-align: center;
+}
+
+section h3 {
+    background-color: var(--lighterblue);
 }
 
 .card {
-  grid-column: 2/4;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.left-col {
+    grid-column: 1/13;
+}
+
+.right-col {
+    grid-column: 1/13
 }
