--- a/lesson02/styles/base.css
+++ b/lesson02/styles/base.css
@@ -15,6 +15,7 @@ main {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     background-color: black;
+    border-radius: 15px;
 }
 
 h1 {
