--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,11 +1,22 @@
         @media screen and (min-width: 800px) {
             nav {
+                display: flex;
                 flex-direction: row;
+                flex-wrap: nowrap;
+                justify-content: space-evenly;
+                text-align: center;
+                background-color: var(--lighterblue);
+                max-width: 80%;
+                margin: 0 auto;
+                padding: 40px 20px;
             }
             .left-col {
-                grid-column: 1/3
+                grid-column: 1/7
             }
             .right-col {
-                grid-column: 3/5
+                grid-column: 7/13
+            }
+            #hamburger {
+                display: none;
             }
         }
