--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,14 +1,20 @@
         @media screen and (min-width: 800px) {
-            nav {
+            .nav {
                 display: flex;
                 flex-direction: row;
                 flex-wrap: nowrap;
                 justify-content: space-evenly;
                 text-align: center;
-                background-color: var(--lighterblue);
+                background-color: var(--licorice);
                 max-width: 80%;
                 margin: 0 auto;
-                padding: 40px 20px;
+                border-radius: 10px;
+            }
+            .nav li {
+                display: block;
+                flex: 1 1 100%;
+                padding: 30px 10px;
+                border-radius: 10px 10px 0 0;
             }
             .left-col {
                 grid-column: 1/7
