--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -25,4 +25,105 @@ header {
 .header-iden {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    color: var(--creamy);
+    flex-wrap: nowrap;
+    width: 100%;
+    height: 200px;
+}
+
+.header-title {
+    max-width: 500px;
+}
+
+.header-img {
+    max-height: 100%;
+}
+
+.header-img img {
+    max-width: 200px;
+}
+
+nav ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    text-align: center;
+    background-color: var(--darkblue);
+    max-width: 80%;
+    margin: 0 auto;
+    border-radius: 10px;
+}
+
+ul li {
+    list-style-type: none;
+}
+
+nav a {
+    text-decoration: none;
+    color: var(--creamy);
+}
+
+.button {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.button button {
+    width: 400px;
+    height: 80px;
+    border-radius: 0 0 10px 10px;
+    border-top: none;
+    background-color: var(--rust);
+    color: var(--creamy);
+    font-size: 30px;
+    font-family: "Afacad Flux", sans-serif;
+}
+
+.cards {
+    display: flex;
+    max-width: 80%;
+    flex-wrap: wrap;
+    margin: 20px auto 0 auto;
+    justify-content: center;
+}
+
+.cards section {
+    border: 1px solid black;
+}
+
+.card-2 {
+    flex-grow: 1;
+}
+
+.card-1 {
+    max-width: 80%px;
+}
+
+.spotlight {
+    text-align: center;
+}
+
+.spotlight-card {
+    border: 1px solid black;
+}
+
+.spotlight-card h2 {
+    padding: 20px;
+}
+
+.spotlight-card p {
+    width: 70%;
+}
+
+footer {
+    width: 100%;
+    background-color: var(--darkblue);
+    color: var(--creamy);
+    text-align: center;
+    margin-top: 20px;
 }
