--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -9,12 +9,13 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Afacad Flux", sans-serif;
 }
 
 header {
     width: 100%;
     height: 200px;
-    background-image: url("../images/Taylor-Mountain-OG.jpg");
+    background-image: url("../images/taylor-mountain-og.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -43,6 +44,14 @@ header {
 
 .header-img img {
     max-width: 200px;
+}
+
+nav {
+    display: none;
+}
+
+display.open {
+    display: block;
 }
 
 nav ul {
@@ -126,4 +135,14 @@ footer {
     color: var(--creamy);
     text-align: center;
     margin-top: 20px;
+}
+
+#hamburger::before {
+    content: "☰";
+    font-size: 25px;
+    float: left;
+}
+
+#hamburger.open::before {
+    content: "✖️"
 }
