--- a/styles/base.css
+++ b/styles/base.css
@@ -15,11 +15,11 @@
     box-sizing: border-box;
 }
 
-nav.nav {
+nav .nav {
     display: none;
 }
 
-.nav.open {
+nav .open {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
