--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -3,18 +3,22 @@
         flex-grow: 1;
         min-width: 40%;
     }
-    .nav {
+    #nav {
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
         justify-content: space-evenly;
         text-align: center;
-        background-color: var(--darkblue);
         max-width: 80%;
-        margin: 0 auto;
-        border-radius: 10px;
+        border: none;
+        position: absolute;
+        top: -10px;
+        right: 1rem;
+        background: none;
+        font-size: 1.5em;
+        padding: 0px 0px;
     }
-    .nav li {
+    #nav li {
         display: block;
         flex: 1 1 100%;
         padding: 30px 10px;
