--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,5 +1,6 @@
         @media screen and (min-width: 800px) {
-            .nav {
+            nav .nav,
+            nav .open {
                 display: flex;
                 flex-direction: row;
                 flex-wrap: nowrap;
