--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,6 +1,5 @@
         @media screen and (min-width: 800px) {
-            nav .nav,
-            nav .open {
+            nav .nav {
                 display: flex;
                 flex-direction: row;
                 flex-wrap: nowrap;
