--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -12,14 +12,16 @@
     font-family: "Afacad Flux", sans-serif;
 }
 
+html,
 body {
-    height: 1vh;
+    height: 100%;
 }
 
 header {
     width: 100%;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .header-iden {
@@ -31,17 +33,11 @@ header {
     color: var(--creamy);
     flex-wrap: nowrap;
     width: 100%;
-    height: 70px;
     padding-left: 20px;
 }
 
 .header-title {
     max-width: 300px;
-}
-
-.header-title h2 {
-    position: relative;
-    bottom: 20px;
 }
 
 .header-img {
@@ -62,12 +58,15 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 
 #nav {
     width: 50%;
     border-top: 1px solid black;
     font-size: 25px;
+    background-color: var(--darkblue);
+    color: var(--creamy)
 }
 
 nav .open {
@@ -182,10 +181,11 @@ footer {
 
 #hamburger {
     position: absolute;
-    top: 15px;
+    top: .5em;
     right: 15px;
-    background-color: var(--darkblue);
+    background-color: transparent;
     border: none;
+    color: var(--creamy)
 }
 
 #hamburger::before {
@@ -194,7 +194,7 @@ footer {
 }
 
 #hamburger.open::before {
-    content: "✖️"
+    content: "✖";
 }
 
 .switch {
