--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -12,7 +12,7 @@
         max-width: 80%;
         border: none;
         position: absolute;
-        top: -10px;
+        bottom: -15px;
         right: 1rem;
         background: none;
         font-size: 1.5em;
