--- a/styles/base.css
+++ b/styles/base.css
@@ -27,6 +27,12 @@ nav .open {
     text-align: center;
     background-color: var(--licorice);
     padding: 40px;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.nav li {
+    list-style-type: none;
 }
 
 .nav a {
@@ -100,14 +106,25 @@ section h3 {
     grid-column: 2/12
 }
 
+#hamburger {
+    /* position: absolute; */
+    background-color: transparent;
+    border: none;
+    padding-left: 10px;
+    /* top: 15px;
+    left: 15px; */
+}
+
 #hamburger::before {
     content: "☰";
     font-size: 25px;
     float: left;
+    color: var(--light)
 }
 
 #hamburger.open::before {
-    content: "✖️"
+    content: "✖";
+    color: var(var(--light));
 }
 
 .active:hover {
