--- a/styles/base.css
+++ b/styles/base.css
@@ -157,10 +157,12 @@ section h3 {
     object-fit: cover;
 }
 
-.temple-hero h2 {
+.temple-hero p {
     position: absolute;
     top: 75px;
     color: var(--light);
     background-color: var(--mainblue);
     white-space: nowrap;
+    font-size: 25px;
+    text-align: center;
 }
