fixing css hamburger

--- a/styles/base.css
+++ b/styles/base.css
@@ -124,7 +124,7 @@ section h3 {
 
 #hamburger.open::before {
     content: "✖";
-    color: var(var(--light));
+    color: var(--light);
 }
 
 .active:hover {
