--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -97,10 +97,16 @@ nav a {
     flex-direction: row;
     justify-content: center;
     position: relative;
+    background-color: black;
+}
+
+.button picture {
+    width: 100%;
 }
 
 .button img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -261,4 +267,18 @@ input:checked+.slider:before {
 .dark {
     background-color: #000 !important;
     color: #fff;
+}
+
+.small-img {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.medium-img {
+    display: none;
+}
+
+.large-img {
+    display: none;
 }
