--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -12,3 +12,15 @@
         left: 10px;
     }
 }
+
+@media only screen and (min-width: 1500px) {
+    .medium-img {
+        display: none;
+    }
+    .large-img {
+        display: block;
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+    }
+}
