--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,12 +1,10 @@
 :root {
     --lightblue: #669bbc;
-    --darkblue: #1a1f24;
-    --creamy: #ffffff;
+    --darkblue: #003049;
+    --creamy: #FAF9F6;
     --red: #c1121f;
     --rust: #780000;
-    --black: #111822;
     --dark: #415057;
-    --orange: #c5630c;
     --slate: #060a0d;
 }
 
@@ -19,7 +17,6 @@
 html,
 body {
     height: 100%;
-    background-color: var(--slate);
 }
 
 header {
@@ -119,7 +116,7 @@ nav a {
     width: 250px;
     height: 60px;
     border-radius: 10px;
-    background-color: var(--orange);
+    background-color: var(--rust);
     color: var(--creamy);
     font-size: 30px;
     position: absolute;
@@ -305,7 +302,7 @@ body {
 .month {
     padding: 15px 0px;
     width: 100%;
-    background: #958377;
+    background: var(--lightblue);
     text-align: center;
 }
 
@@ -346,13 +343,13 @@ body {
 .weekdays {
     margin: 0;
     padding: 10px 0;
-    background-color: var(--black);
+    background-color: var(--darkblue);
 }
 
 .weekdays li {
     display: inline-block;
     width: 13.5%;
-    color: #666;
+    color: var(--creamy);
     text-align: center;
 }
 
@@ -361,7 +358,7 @@ body {
 
 .days {
     padding: 10px 0;
-    background: var(--black);
+    background: var(--darkblue);
     margin: 0;
 }
 
@@ -372,7 +369,7 @@ body {
     text-align: center;
     margin-bottom: 5px;
     font-size: 12px;
-    color: #777;
+    color: var(--creamy);
 }
 
 
@@ -380,7 +377,7 @@ body {
 
 .days li .active {
     padding: 5px;
-    background: #958377;
+    background: var(--rust);
     color: white !important
 }
 
@@ -400,7 +397,7 @@ body {
     margin: 10px;
     min-height: 100px;
     text-align: center;
-    background-color: var(--black);
+    background-color: var(--darkblue);
     color: white;
 }
 
@@ -410,7 +407,6 @@ body {
 
 .discover-main {
     grid-column: 1/3;
-    border: 1px solid black;
 }
 
 .discover-main img {
@@ -433,7 +429,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
-    background-color: var(--orange);
+    background-color: var(--rust);
     color: white;
 }
 
