--- a/styles/base.css
+++ b/styles/base.css
@@ -133,7 +133,6 @@ section h3 {
 
 .active {
     font-weight: bold;
-    text-decoration: underline;
     background-color: var(--accent);
     transition: all .4s;
 }
@@ -153,11 +152,10 @@ section h3 {
 .temple-hero img {
     width: 100%;
     height: auto;
-    max-height: 200px;
     object-fit: cover;
 }
 
-.temple-hero p {
+.temple-hero h2 {
     position: absolute;
     top: 75px;
     color: var(--light);
