--- a/styles/base.css
+++ b/styles/base.css
@@ -111,6 +111,7 @@ section h3 {
     background-color: transparent;
     border: none;
     padding-left: 10px;
+    color: White;
     /* top: 15px;
     left: 15px; */
 }
