--- a/styles/base.css
+++ b/styles/base.css
@@ -165,3 +165,12 @@ section h3 {
     font-size: 25px;
     text-align: center;
 }
+
+footer {
+    text-align: center;
+    padding-top: 22px;
+    padding-bottom: 22px;
+    background-color: var(--mainblue);
+    color: white;
+    margin-top: 24px;
+}
