--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -23,4 +23,14 @@
         bottom: 10px;
         right: 10px;
     }
+    .membership-page {
+        flex-direction: row;
+        max-width: 100%;
+    }
+    .formWrapper {
+        flex-grow: 1;
+    }
+    .membership {
+        flex-grow: 1;
+    }
 }
