--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -595,3 +595,35 @@ table {
     color: black;
     font-weight: bold;
 }
+
+#directory {
+    display: grid;
+    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr));
+    grid-gap: 5px;
+    margin: 5px 5px 5px 5px;
+    padding-top: 50px;
+}
+
+#directory div {
+    border: 1px solid black;
+    /* background-color: #2d6f8d; */
+    text-align: center;
+    padding: 5px;
+}
+
+#directory img {
+    margin: 0 5% 0 5%;
+    max-width: 90%;
+    /* border: 1px solid black; */
+}
+
+#directory h3 {
+    font-size: 30px;
+}
+
+.singlefile {
+    grid-template-columns: minmax(250px, 1fr) !important;
+    /* display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important; */
+}
