--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -596,7 +596,7 @@ table {
     font-weight: bold;
 }
 
-#directory {
+.grid {
     display: grid;
     grid-template-columns: repeat( auto-fit, minmax(250px, 1fr));
     grid-gap: 5px;
@@ -604,26 +604,75 @@ table {
     padding-top: 50px;
 }
 
-#directory div {
+.grid div {
     border: 1px solid black;
     /* background-color: #2d6f8d; */
     text-align: center;
     padding: 5px;
 }
 
-#directory img {
+.grid img {
     margin: 0 5% 0 5%;
     max-width: 90%;
     /* border: 1px solid black; */
 }
 
-#directory h3 {
+.grid h3 {
     font-size: 30px;
 }
 
+#directory {
+    padding-top: 100px;
+}
+
 .singlefile {
-    grid-template-columns: minmax(250px, 1fr) !important;
-    /* display: flex !important;
-    flex-direction: column !important;
-    align-items: center !important; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.singlefile img {
+    display: none;
+}
+
+.singlefile div {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr 1fr 1fr;
+    width: 80%;
+}
+
+.singlefile div:nth-child(odd) {
+    background-color: rgb(214, 213, 213);
+}
+
+.none {
+    display: none
+}
+
+#view {
+    position: absolute;
+    top: 5px;
+    left: 50%;
+    right: 0;
+    width: fit-content;
+    text-align: center;
+}
+
+#view:hover {
+    cursor: pointer;
+}
+
+#grid-btn,
+#list-btn {
+    position: relative;
+    left: -50%;
+}
+
+#view img {
+    width: 50px;
+    height: auto;
+}
+
+main {
+    position: relative;
 }
