--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -676,3 +676,74 @@ table {
 main {
     position: relative;
 }
+
+#forecast {
+    display: flex;
+    flex-direction: column;
+    /* max-height: 200px; */
+    background-image: linear-gradient(var(--darkblue), var(--lightblue));
+    color: white;
+    border-radius: 20px;
+}
+
+#forecast img {
+    width: 30px;
+    height: auto;
+}
+
+
+/* #forecast div:nth-child(odd) {
+    background-color: rgb(224, 224, 224);
+} */
+
+#forecast1,
+#forecast2,
+#forecast3,
+#forecast4,
+#forecast5,
+#forecast6,
+#forecast7 {
+    display: grid;
+    grid-template-columns: 4fr 1fr 1fr;
+    padding: 3px;
+    text-align: left;
+}
+
+.weather-stuff {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#weather-icon {
+    width: 75% !important;
+    max-width: 100px;
+    /* border: 1px solid black; */
+    background-image: radial-gradient(var(--lightblue), rgba(0, 48, 73, 0));
+    border-radius: 1px;
+}
+
+.weather {
+    text-align: center;
+}
+
+.weather hr {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.weather p {
+    padding: 10px;
+}
+
+figcaption {
+    text-align: center;
+}
+
+#forecast-title {
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    justify-content: space-around;
+    align-items: center;
+}
