--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,15 +1,21 @@
 @media only screen and (min-width: 1000px) {
-    .spotlight-card {
-        width: 25%;
-        padding: 10px;
+    .button button {
+        left: 10px;
     }
     .flexbox {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
     }
-    .button button {
-        left: 10px;
+    .spotlight-card {
+        width: 30%;
+        padding: 10px;
+    }
+    .spotlight-card img {
+        width: 200px;
+        max-width: 95%;
+        height: auto;
+        margin: 3px;
     }
 }
 
@@ -33,4 +39,9 @@
     .membership {
         flex-grow: 1;
     }
+    .switch {
+        top: 5px;
+    }
 }
+
+@media only screen and (min-width: 1100px) {}
