--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -45,6 +45,9 @@
     .container:hover .overlay {
         opacity: 1;
     }
+    .switch {
+        top: 5px;
+    }
 }
 
 @media only screen and (min-width: 1000px) {
