--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -3,6 +3,50 @@
         flex-grow: 1;
         min-width: 40%;
     }
+    .left-col {
+        grid-column: 1/7
+    }
+    .right-col {
+        grid-column: 7/13
+    }
+    .discover-main {
+        grid-column: 2/3;
+    }
+    .sidebar {
+        grid-column: 1/2;
+    }
+    .switch {
+        top: 5px;
+    }
+    .overlay {
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 20px;
+        background-color: var(--rust);
+        color: white;
+    }
+    .container:hover img {
+        opacity: .3;
+    }
+    .container:hover .overlay {
+        opacity: 1;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+    .medium-img {
+        display: block;
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+    }
+    .small-img {
+        display: none;
+    }
     #nav {
         display: flex;
         flex-direction: row;
@@ -24,40 +68,7 @@
         padding: 30px 10px;
         border-radius: 10px 10px 0 0;
     }
-    .left-col {
-        grid-column: 1/7
-    }
-    .right-col {
-        grid-column: 7/13
-    }
     #hamburger {
-        display: none;
-    }
-    .discover-main {
-        grid-column: 2/3;
-    }
-    .sidebar {
-        grid-column: 1/2;
-    }
-    .container:hover img {
-        opacity: .3;
-    }
-    .container:hover .overlay {
-        opacity: 1;
-    }
-    .switch {
-        top: 5px;
-    }
-}
-
-@media only screen and (min-width: 1000px) {
-    .medium-img {
-        display: block;
-        position: absolute;
-        bottom: 10px;
-        right: 10px;
-    }
-    .small-img {
         display: none;
     }
 }
