--- a/scoots/styles/medium.css
+++ b/scoots/styles/medium.css
@@ -19,6 +19,7 @@
         font-size: 1.2em;
         padding: 10px;
         margin-left: -50%;
+        display: block;
     }
     #nav a {
         display: inline-block;
