--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -132,7 +132,7 @@ nav {
     font-size: 25px;
     color: #818181;
     display: block;
-    transition: .3;
+    transition: .3s;
     /* background-color: blue; */
 }
 
