--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -81,6 +81,10 @@ footer {
     padding-top: 20px;
 }
 
+footer a {
+    color: black;
+}
+
 .closed {
     display: none;
 }
@@ -238,7 +242,7 @@ nav {
 
 .card a {
     width: 60%;
-    background-color: var(--sunset);
+    background-color: var(--darksunset);
     color: white;
     padding: 4px 0;
     text-decoration: none;
@@ -254,7 +258,7 @@ nav {
     margin: 10px auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    background-image: linear-gradient(to bottom right, var(--lightblue), var(--darkblue));
+    background-image: linear-gradient(to bottom right, rgba(34, 34, 34, 1), rgba(34, 34, 34, .8));
     text-align: center;
     border: 2px double black;
     border-radius: 10px;
@@ -264,10 +268,12 @@ nav {
 #weather h2 {
     grid-column: 1/3;
     font-size: 1.5em;
+    color: #f1f1f1;
 }
 
 #weather hr {
     grid-column: 1/3;
+    width: 80%;
 }
 
 #weather img {
@@ -278,6 +284,7 @@ nav {
 #weather p {
     font-size: 1em;
     margin: 0;
+    color: #f1f1f1;
 }
 
 .tempbtn::after {
